enhanced java workflow and atomic skills by evaluating with a realistic test input (loop)